--- a/Honors Introduction to Algebra/Homework 6/main.tex
+++ b/Honors Introduction to Algebra/Homework 6/main.tex
@@ -254,13 +254,27 @@ Page 357-370: 11.2, 11.7, 11.8
 \end{problem}
 
 \begin{problem}[8.21]
+    Let $\Phi_{1}(x) = x - 1$, and for $n /geq 1$, define the $n$th cyclotomic polynomial $\Phi_n(x)$ inductively by the formula
+    \[
+        x^n - 1 = \prod_{m|n}\Phi_m(x)
+    \]
+    as described in Definition 8.37.
     \begin{enumerate}[label=(\alph*)]
-        \item 
+        \item Compute $\Phi_n(x)$ for all $2 \leq n \leq 10$.
         \begin{solution}
 
         \end{solution}
 
-        \item 
+        \item Let $\zeta_n = e^{2\pi i/n} \in \mathbb{C}$ be a primitive $n$th-root of unity. Prove that $\Phi_n(x)$ factors in $\mathbb{C}[x]$ as
+              \[
+                    \Phi_n(x) = \prod_{\substack{1\leq d \leq d\\ \gcd(d, n)=1}}(x - \zeta^d_n)
+              \]
+              Thus $\Phi_n(x)$ is a monic polynomial in $\mathbb{C}[x]$.
+        \begin{solution}
+
+        \end{solution}
+
+        \item Prove that all the coefficients of $\Phi_n(x)$ are in $\mathbb{Z}$.
         \begin{solution}
 
         \end{solution}
@@ -268,27 +282,43 @@ Page 357-370: 11.2, 11.7, 11.8
 \end{problem}
 
 \begin{problem}[8.23]
-    \begin{enumerate}[label=(\alph*)]
-        \item 
-        \begin{solution}
+    Let $R$ be a PID with fraction field $K$, let $\pi \in R$ be an irreducible element, and let
+    \[
+        f(x) = c_0 = c_1x + \cdots + c_dx^d \in R[x]
+    \]
+    be a polynomial whose coefficients satisfy
+    \[
+        \pi \not| c_d, \quad \pi | c_i \text{ for } 0 \leq i < d, \quad \text{ and } \pi^2 \not| c_0
+    \]
+    Prove that $f(x)$ is irreducible in $K[x]$.
+    
+    \begin{solution}
 
-        \end{solution}
-
-        \item 
-        \begin{solution}
-
-        \end{solution}
-    \end{enumerate}
+    \end{solution}
 \end{problem}
 
 \begin{problem}[10.6]
+    Let $V$ be the $\mathbb{R}$-vector space of polynomials of degree at most 3,
+    \[
+        V = \{ a + bx + cx^2 + dx^3 : a, b, c, d \in \mathbb{R} \}
+    \]
     \begin{enumerate}[label=(\alph*)]
-        \item 
+        \item Prove that the following sets are $\mathbb{R}$-bases for $L$:
+        \[
+            \text{(i) } \mathcal{A} = \{ 1, x, x^2, x^3 \} \quad \quad \text{(ii) } \mathcal{B} = \{ 1, x + 1, (x + 1)^2, (x + 1)^3 \}
+        \]
         \begin{solution}
 
         \end{solution}
 
-        \item 
+        \item Let $L : V \longrightarrow V$ be differentiation: i.e.,
+              \[
+                    L : V \longrightarrow V, \quad L(a + bx + cx^2 + dx^3) = b + 2cx + 3dx^2
+              \]
+              Using the bases in (a), compute the following matrices associated to $L$:
+              \[
+                    \text{(i) } \mathcal{M}_{L, \mathcal{A}, \mathcal{A}} \quad \quad \text{(ii) } \mathcal{M}_{L, \mathcal{B}, \mathcal{A}}
+              \]
         \begin{solution}
 
         \end{solution}
@@ -296,27 +326,38 @@ Page 357-370: 11.2, 11.7, 11.8
 \end{problem}
 
 \begin{problem}[10.12]
+    Let $V$ be a finite-dimensional vector space, and let $L \in \End_F(V)$. Prove that the following are equivalent:
     \begin{enumerate}[label=(\alph*)]
-        \item 
-        \begin{solution}
-
-        \end{solution}
-
-        \item 
-        \begin{solution}
-
-        \end{solution}
+        \item There is an $L_1 \in \End_F(V)$ satisfying $LL_1 = I$. (We say that $L_1$ is a right-inverse)
+        \item There is an $L_2 \in \End_F(V)$ satisfying $L_2L = I$. (We say that $L_2$ is a left-inverse)
     \end{enumerate}
+    N.B. Be sure that you use the hypothesis that $V$ is finite dimensional, since the statement is false for infinite-dimensional vector spaces.
+    
+    \begin{solution}
+
+    \end{solution}
 \end{problem}
 
 \begin{problem}[11.2]
+    Let $R$ be a ring, and let $a_1, \ldots, a_n \in R$. We define an evaluation map
+    \[
+        E_a : R[x] \longrightarrow R^n, \quad E_a(f(x)) = (f(a_1), \ldots, f(a_n))
+    \]
     \begin{enumerate}[label=(\alph*)]
-        \item 
+        \item Prove that $E_a$ is an $R$-module homomorphism
+        
         \begin{solution}
 
         \end{solution}
 
-        \item 
+        \item Suppose that $R$ is an integral domain. Prove that the kernel of $E_a$ is a principal ideal of $R[x]$. Find a generator for this ideal.
+        
+        \begin{solution}
+
+        \end{solution}
+
+        \item Is (b) true if we drop the assumption that $R$ is an intergral domain?
+        
         \begin{solution}
 
         \end{solution}
@@ -324,13 +365,35 @@ Page 357-370: 11.2, 11.7, 11.8
 \end{problem}
 
 \begin{problem}[11.7]
+    THis exercise asks you to generalize Propostiion 11.18. Let $M$ be an $R$-module. For each ideal $I$ of $R$, we define $IM$ to be the set
+    \[
+        IM = \{ a_1m_1 + \cdots + a_km_k : k \geq 0, a_1, \ldots, a_k \in I, m_1, \ldots, m_k \in M \}
+    \]
     \begin{enumerate}[label=(\alph*)]
-        \item 
+        \item Prove that $IM$ is a submodule of $M$.
+        
         \begin{solution}
 
         \end{solution}
 
-        \item 
+        \item Prove that the quotient module $M/IM$ has a natural structure as an $R/I$-module.
+        
+        \begin{solution}
+
+        \end{solution}
+
+        \item More generally, let $J \subseteq I$ be ideals of $R$, and let $K$ be the set
+              \[
+                    K =\{ r \in R : rI \subseteq J \}
+              \]
+            Prove that $K$ is an ideal of $R$, that $JM$ is a submodule of $IM$, and that the quotient $IM/JM$ is naturally an $R/K$-module.
+        
+        \begin{solution}
+
+        \end{solution}
+
+        \item Suppose that $R$ is an integral domain, and suppose that the ideals $I$ and $J$ in (c) are principal, say $I = aR$ and $J = bR$. Prove that $b = ac$ for some $c \in R$ and that the ideal $K$ defined in (c) is the principal ideal $cR$.
+        
         \begin{solution}
 
         \end{solution}
@@ -338,17 +401,15 @@ Page 357-370: 11.2, 11.7, 11.8
 \end{problem}
 
 \begin{problem}[11.8]
-    \begin{enumerate}[label=(\alph*)]
-        \item 
-        \begin{solution}
+    Let $M$ be a finitely generated free $R$-module, and let $J$ be a maximal ideal of $R$. Prove that 
+    \[
+        \rank_R(M) = \dim_{R/J}(M/JM)
+    \]
+    Explain why this equality gives an alternative proof of Theorem 11.27; i.e., explain why it implies that every basis of $M$ has the same number of elements. (See Exerecise 11.7 for the definition of the submodule $JM$)
+    
+    \begin{solution}
 
-        \end{solution}
-
-        \item 
-        \begin{solution}
-
-        \end{solution}
-    \end{enumerate}
+    \end{solution}
 \end{problem}
 
 \end{document}
